--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,98 +1,83 @@
-name: PHP Application CI/CD
+name: Docker Build and Push to ACR for PHP App
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - main  # Trigger on the main branch
+
+permissions:
+  contents: read
 
 jobs:
-  build-and-test:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      # Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       # Set up PHP
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: '8.0'  # Specify the PHP version you need
 
-      # Install dependencies and run tests
-      - name: Install PHP dependencies
+      # Install dependencies (if using Composer)
+      - name: Install Composer dependencies
         run: |
-          composer install
+          composer install --prefer-dist --no-progress --no-suggest
 
+      # Run tests (if you have any)
       - name: Run tests for PHP
         run: |
-          ./vendor/bin/phpunit
+          vendor/bin/phpunit
 
-  dockerize-and-push:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    steps:
-      # Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # Build and tag Docker image
-      - name: Build Docker image for PHP
+      - name: Docker Login to ACR
         run: |
-          docker build -t sample-php:latest .
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u ${{ secrets.ACR_USERNAME }} --password-stdin
 
-      - name: Tag Docker image to ACR
+      - name: Build and Tag Docker Image
         run: |
-          docker tag sample-php:latest ${{ secrets.ACR_NAME }}.azurecr.io/sample-php:latest
+          IMAGE_NAME=${{ secrets.ACR_NAME }}.azurecr.io/myphpapp
+          docker build -t $IMAGE_NAME:${{ github.sha }} .
+          docker tag $IMAGE_NAME:${{ github.sha }} $IMAGE_NAME:latest
 
-      # Log in to Azure Container Registry (ACR)
-      - name: Log in to Azure Container Registry
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.ACR_NAME }}.azurecr.io
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      # Push Docker image to ACR
-      - name: Push Docker image for PHP to ACR
+      - name: Push Docker Image to ACR
         run: |
-          docker push ${{ secrets.ACR_NAME }}.azurecr.io/sample-php:latest
+          IMAGE_NAME=${{ secrets.ACR_NAME }}.azurecr.io/myphpapp
+          docker push $IMAGE_NAME:${{ github.sha }}
+          docker push $IMAGE_NAME:latest
 
+      - name: Logout from Docker
+        run: docker logout
+
+  # Optional: Deploy to AKS using Helm
   deploy:
     runs-on: ubuntu-latest
-    needs: dockerize-and-push
+    needs: build-and-push
     steps:
-      # Checkout the repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Set up Azure CLI
       - name: Install Azure CLI
         run: |
           curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
-      # Log in to Azure using service principal credentials
       - name: Log in to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Get AKS credentials
       - name: Get AKS credentials
         run: |
           az aks get-credentials --resource-group RGroup --name RGroup-aks
 
-      # Install Helm
       - name: Install Helm
         run: |
           curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
-      # Deploy the PHP application using Helm
       - name: Deploy PHP app to AKS
         run: |
           helm upgrade --install sample-php ./helm-charts \
-            --set image.repository=${{ secrets.ACR_NAME }}.azurecr.io/sample-php \
+            --set image.repository=${{ secrets.ACR_NAME }}.azurecr.io/myphpapp \
             --set image.tag=latest
